<?xml version="1.0"?>
<package format="3">
  <name>come_to_user</name>
  <version>0.0.0</version>
  <description>ROS 2 person-following skill that drives toward a visible user and stops on arm-camera edge detection.</description>
  <maintainer email="nikhil@example.com">nikhil</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
